# symbolicX

./: .gitmodules  README.md  coverage.py  dataflow.py  display.py  function.py  generator.py  interface.py  main.py  pyproject.toml  reentrency.sol  runner.py  setup.cfg  test.sol
common/: abi.py  logger.py  util.py
coverage/: inst_coverage.py  path_coverage.py
crytic-export/: combined_solc.json
symbolicx/corpus/: generator.py
symbolicx/crytic-export/: combined_solc.json
symbolicx/executor/: __init__.py  __main__.py  display.py  interface.py  runner.py
