[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolicX"
dynamic = ["version", "readme"]
dependencies = [
    "setuptools>=45",
    "wheel",
    "pymaat>=0.6.7",
    "eth_abi",
    "pysha3",
    "rlp",
    "crytic-compile",
    "slither-analyzer",
    "solc-select",
    "pyyaml"
]
requires-python = ">=3.7"

[tool.setuptools.dynamic]
version = {file = "Version.txt"}
readme = {file = ["README.md"]}

[tool.black]
target-version = ['py37']
line-length = 80

[tool.pylint.messages_control]
disable = """
missing-module-docstring,
missing-class-docstring,
missing-function-docstring,
invalid-name
"""

[project.scripts]
"symbolicX" = "symbolicx.executor.__main__:main"
"feed-symbolicX" = "symbolicx.corpus.__main__:main"